$Id: NEWS,v 1.1012 2009-03-18 23:32:30 castaglia Exp $

-----------------------------------------------------------------------------
  More details on the bugs listed below can be found by using the bug number
  indicated in the following URL:

    http://bugs.proftpd.org/show_bug.cgi?id=N

  where `N' is the bug number.
-----------------------------------------------------------------------------

CVS
--------------------------------
- Bug 1801 - Faulty SQLConnectInfo PERCALL policy - connections not closed
  after each call.
- Bug 2894 - Deprecate the AnonymousGroup directive.
- Bug 3123 - Use PQescapeStringConn() rather than PQescapeString().
- Bug 3133 - mod_facts should advertise TVFS support in the FEAT response.
- Bug 3128 - mod_sql_sqlite should use transactions for INSERT/UPDATE
  statements.
- Bug 3155 - Change the IdentLookups default to 'off'.  The RFC1413 IDENT
  lookup adds latency to the login process, so much so that it is a FAQ
  to configure "IdentLookups off".  In addition, the IDENT protocol is not
  secure; it can easily be spoofed using man-in-the-middle attacks.  Sites
  that require IDENT lookups must now explicitly configure "IdentLookups on".
- Bug 3156 - Allow resumed downloads when HiddenStore is in effect.
- Bug 3170 - RewriteMap unescape URL encoding broken by RewriteCondition
  backreference handling.
- Bug 2728 - Support for variables in ServerIdent directive.  The %L, %V,
  and %v variables are now supported for ServerIdent identity strings.
- Bug 3178 - mod_wrap2 does not handle IPv4-mapped IPv6 addresses.
- Bug 3179 - Restarted proftpd using mod_shaper will segfault.
- Bug 2720 - HideUser/HideGroup should be more flexible.
- Bug 3183 - Incorrect logging to wtmp.
- Bug 2608 - DNS should not be used for "server config" address discovery.
  A new -S command-line option has been added, for specifying the IP address
  to use for the host, rather than using DNS to resolve the host IP address
  from the hostname.