@@ -1,4 +1,4 @@
-$Id: NEWS,v 1.1012 2009-03-18 23:32:30 castaglia Exp $
+$Id: NEWS,v 1.1013 2009-03-20 19:01:34 castaglia Exp $
 
 -----------------------------------------------------------------------------
   More details on the bugs listed below can be found by using the bug number
@@ -83,6 +83,7 @@ CVS
 - Bug 3219 - Support environment variable substitutions in mod_rewrite rules.
   RewriteCondition and RewriteRules can now contain "%{ENV:var}" style
   strings for environment variable substitution.
+- Bug 3221 - Command line defines (-D/--define) are lost on SIGHUP.
 
 1.3.2 - Released 5-Feb-2009
 --------------------------------
